fix event cycle happening on google-custom-search linedit widgets

BUG: 216795

svn path=/trunk/KDE/kdelibs/; revision=1079858